[gd_scene load_steps=8 format=3 uid="uid://bnm0neypn4kdx"]

[ext_resource type="Script" path="res://script/cards/orange/ap.gd" id="1_qrj0w"]
[ext_resource type="PackedScene" uid="uid://tahtsvfotixd" path="res://scenes/component/health_component.tscn" id="2_hnv7d"]
[ext_resource type="PackedScene" uid="uid://4gn77audskrs" path="res://scenes/component/attack_component.tscn" id="3_ojiph"]
[ext_resource type="PackedScene" uid="uid://bx028wy2lu25i" path="res://scenes/component/outfit_component.tscn" id="4_14vx4"]
[ext_resource type="Texture2D" uid="uid://bxxvny2y780cn" path="res://img/piece/standerd/orange.png" id="5_2dk2y"]
[ext_resource type="PackedScene" uid="uid://c83kbyxqmarvi" path="res://scenes/component/score_component.tscn" id="6_vkcwe"]
[ext_resource type="PackedScene" uid="uid://d2lqpgvgq4oh3" path="res://scenes/component/buff_component.tscn" id="7_2jcne"]

[node name="OrangeAP" type="Node2D" node_paths=PackedStringArray("health_component", "attack_component", "outfit_component", "score_component", "buff_component")]
script = ExtResource("1_qrj0w")
health_component = NodePath("HealthComponent")
attack_component = NodePath("AttackComponent")
outfit_component = NodePath("OutfitComponent")
score_component = NodePath("ScoreComponent")
buff_component = NodePath("BuffComponent")

[node name="HealthComponent" parent="." instance=ExtResource("2_hnv7d")]
unique_name_in_owner = true
DEAFULT_MAX_HEALTH = 3

[node name="AttackComponent" parent="." instance=ExtResource("3_ojiph")]
unique_name_in_owner = true
DEFAULT_ATK = 2
ATK_PATTERN = 5

[node name="OutfitComponent" parent="." instance=ExtResource("4_14vx4")]
unique_name_in_owner = true
icon_texture = ExtResource("5_2dk2y")
frame = 2

[node name="ScoreComponent" parent="." instance=ExtResource("6_vkcwe")]
unique_name_in_owner = true

[node name="BuffComponent" parent="." instance=ExtResource("7_2jcne")]
unique_name_in_owner = true

[connection signal="on_hit" from="AttackComponent" to="." method="_on_attack_component_on_hit"]
